--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       property="og:image"
       content="https://lewhunt.github.io/assets/readme/mm-promo-4.jpg"
     />
+    <meta property="og:image:alt" content="Mixmotion Player" />
+    <meta property="og:site_name" content="Github" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@github" />
