--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/mixmotion/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Mixmotion Player - Discover Free Music with Captivating Visuals
+      Mixmotion Player - Discover New Music with Captivating Visuals
     </title>
     <meta
       name="description"
